[workspace]
members = [
    "handshake",
    "quinn",
]
resolver = "2"

[workspace.package]
authors = ["Will Buik"]
repository = "https://github.com/WillBuik/hyphae-handshake"
rust-version = "1.81"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
hyphae-handshake = { path = "handshake", default-features = false }
