[package]
name = "hyphae-handshake"
version = "0.1.0-beta.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"], optional = true }
blake2 = { version = "0.10.6", default-features = false, features = ["reset"], optional = true }
chacha20 = { version = "0.9.1", default-features = false, optional = true }
chacha20poly1305 = { version = "0.10.1", default-features = false, optional = true }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["precomputed-tables", "rand_core", "zeroize"], optional = true }
rand_core = "0.6.4"
sha2 = { version = "0.10.8", default-features = false, optional = true }
zeroize = { version = "1.8.1", default-features = false, features = ["zeroize_derive"] }

[features]
default = [ "rustcrypto", "alloc" ]
alloc = [ "zeroize/alloc" ]
keylog = []
rustcrypto = [
    "dep:aes-gcm", "dep:blake2", "dep:chacha20",
    "dep:chacha20poly1305", "dep:curve25519-dalek", "dep:sha2"
]

[dev-dependencies]
snow = "0.9.6"
rand_core = { version = "0.6.4", features = ["getrandom"] }
hmac = "0.12.1"
hkdf = "0.12.4"
